--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=hospitalManagement
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/hospitalDB
-spring.datasource.username=postgres
-spring.datasource.password=yashraj@123
+spring.datasource.username=#servername (eg - postgres)
+spring.datasource.password=#yourpassword
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
